# dp2p

./: .gitignore  .releaserc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  app.config.ts  eslint.config.js  eslint.config.ts  index.html  package.json  playwright.config.ts  prisma.config.ts  pyproject.toml  schema.prisma  stackblitz.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  wrangler.json  wrangler.toml
.github/ISSUE_TEMPLATE/: 有希望改进的地方-.md
.github/workflows/: auto_deploy.yml  deploy.yml  release.yml  semantic_release.yml
cli/dp2p-relay/: Cargo.toml
crates/endpoint/: Cargo.toml
crates/endpoint-wasm/: Cargo.toml
crates/endpoint-wasm/src/: error.rs  lib.rs
docs/: CONTRIBUTING.md
docs/zh/: PROJECT_ARCH.md  (+1 more)
native/: .gitignore  Cargo.toml  tauri.conf.json
native/capabilities/: default.json
native/src/: api.rs  endpoint.rs  error.rs  file_system.rs  lib.rs  main.rs  option_ext.rs  router.rs  sqlite.rs  state.rs
native/src/api/sqlite/: types.rs
native/src/endpoint/: event.rs
native/src/router/: endpoint_api.rs  sqlite_api.rs
native/src/router/sqlite_api/: traits.rs
network/: Cargo.toml
protocol/: user.proto
public/: _headers  db_schema.sql
scripts/: generate_schema.ts
src/: .gitignore  app.css  app.tsx  database.ts  entry-client.tsx  entry-server.tsx  main.ts  main.tsx  render.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
wasm/: Cargo.toml
wasm-and-native/: Cargo.toml
wasm/endpoint/: Cargo.toml
wasm/endpoint/src/: error.rs  lib.rs
wasm/src/: node.rs  service.rs  wasm.rs
wasm/src/wasm/: node.rs
(+78 files in other folders)
