[package]
name = "native"
version = "0.1.0"
edition = "2024"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
serde_json = "1.0.145"

tauri-plugin-prevent-default = { version = "3.0.3", features = [
    "platform-windows",
] }
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-os = "2.3.1"
tauri-plugin-opener = "2.5.0"
