[package]
name = "endpoint-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
endpoint = { path = "../endpoint" }
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
log = "0.4.28"
eyre = "0.6.12"
rand = "0.9.2"
iroh = "0.95.1"
tokio = { version = "1.48.0", default-features = false, features = [
    "parking_lot",
    "sync",
] }
